<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Patient Record</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_patient">SelectPatientActivity</string>
    <string name="title_activity_show_patient">ShowPatient</string>
    <string name="title_activity_patient_records">PatientRecordsActivity</string>
    <string name="title_activity_photo_and_audio_for_hospital">PhotoAndAudioForHospital</string>
    <string name="title_activity_select_hospital">SelectHospitalActivity</string>
    <string name="title_activity_user_log">UserLogActivity</string>
    <string name="hospitalTitle">List Of Hospitals Within Range:</string>
    <string name="loginTitle">e-Mergency Login</string>
    <string name="loginButton">Login</string>
    <string name="loginPassword">Enter Password</string>
    <string name="loginIdentification">Enter User Identification</string>
    <string name="GenericDescription">"Generic Image Description</string>
    <string name="name_">Name:</string>
    <string name="allergies">Allergies</string>
    <string name="setname">setName</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="username">Username</string>
    <string name="family_medical_history">Family Medical History</string>
    <string name="doctor_concerns_image">doctor concerns image</string>
    <string name="default_person_picture">default person picture</string>
    <string name="type">type</string>
    <string name="flower_image">flower image</string>
    <string name="pharmacy_cross_">"pharmacy cross "</string>
    <string name="family_history_image">family history image</string>
    <string name="doctor_s_concerns">Doctor\'s Concerns</string>
    <string name="medical_history">Medical History</string>
    <string name="medication_image">medication image</string>
    <string name="medication">Medication</string>
    <string name="blood_type_image">blood Type image</string>
    <string name="_0_seconds_recorded">0 Seconds Recorded</string>
    <string name="stop_recording_audio">Stop Recording Audio</string>
    <string name="textview">TextView</string>
    <string name="title_activity_show_medication">ShowMedicationActivity</string>
    <string name="title_activity_show_medical_history">ShowMedicalHistoryActivity</string>
    <string name="title_activity_show_history">ShowHistoryActivity</string>
    <string name="title_activity_show_allergy">ShowAllergyActivity</string>
    <string name="title_activity_show_patient_family_history">ShowPatientFamilyHistory</string>
    <string name="title_activity_show_concerns">ShowConcernsActivity</string>
    <string name="logged_in_as_">Logged In As:</string>
    <string name="ambulance_image">ambulance image</string>
    <string name="_id_user_log_list_item">\@+id/user_log_list_item</string>
    <string name="select_a_patient_from_the_list">Select A Patient From The List</string>
    <string name="person">person</string>
    <string name="house_number">House Number</string>
    <string name="full_name">Full Name</string>
    <string name="postcode">Postcode</string>
    <string name="enter_at_least_2_boxes">Enter At Least 2 Boxes</string>
    <string name="patient_search">Patient Search</string>
    <string name="type_details_into_boxes">Type Details Into Boxes</string>
    <string name="title_activity_sent_patient">SentPatient</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="paramedic_log_">Paramedic Log:</string>
    <string name="diary">diary</string>
    <string name="time_amp_date">Time &amp;amp; Date</string>
    <string name="go_back">Go Back</string>
    <string name="action">Action</string>
    <string name="n_a">N/A</string>
    <string name="medium_text">Medium Text</string>
    <string name="record_voice_and_picture_data_to_identify_patient">Record Voice And Picture Data To Identify Patient</string>
    <string name="start_recording_audio">Start Recording Audio</string>
    <string name="take_picture">Take Picture</string>
    <string name="title_activity_call_emergency_services">CallEmergencyServicesActivity</string>
    <string name="title_activity_user_manual">UserManualActivity</string>
    <string name="button">Button</string>
    <string name="disabled_buttons_look_like">Disabled Buttons Look Like</string>
    <string name="enabled_buttons_look_like">Enabled Buttons Look Like</string>
    <string name="swiping_left_or_right_on_the_patient_records_screen_will_begin_the_process_to_send_the_patient_to_a_hospital">Swiping Left or Right on the Patient Records Screen will begin the process to send the patient to a hospital</string>
    <string name="user_logged_in_as_">User logged In As:</string>
    <string name="_abc">" abc"</string>
    <string name="pressing_your_username_brings_up_a_log_of_all_your_activity">Pressing your Username brings up a log of all your activity</string>
    <string name="swiping_up_or_down_on_any_screen_will_allow_you_to_make_a_call_to_any_of_the_emergency_services">Swiping Up or Down on any screen will allow you to make a Call to any of the Emergency Services</string>
    <string name="shake_device_to_go_back">Shake Device To Go Back</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="shake_at_any_time_to_view_help">Shake At Any Time To View Help</string>
    <string name="pulsating_text_should_be_pressed_for_more_information">Pulsating text should be pressed for more information</string>
    <string name="pressable">Pressable</string>

</resources>
