<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pulsatingText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_orange_fade_test1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chrisdixon.mobilepatientrecord.UserManualActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_disabled"
        android:contentDescription="@string/_0_seconds_recorded"
        android:text="@string/button" />

    <ImageView
        android:id="@+id/organDonor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/_0_seconds_recorded"
        android:src="@drawable/arrow_right" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button1"
        android:layout_marginRight="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/disabled_buttons_look_like"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/_0_seconds_recorded"
        android:src="@drawable/arrow_left" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/organDonor"
        android:layout_marginBottom="12dp"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/enabled_buttons_look_like"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/organDonor"
        android:background="@drawable/button"
        android:contentDescription="@string/_0_seconds_recorded"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/organDonor"
        android:layout_alignTop="@+id/imageView3"
        android:layout_marginTop="12dp"
        android:text="@string/swiping_left_or_right_on_the_patient_records_screen_will_begin_the_process_to_send_the_patient_to_a_hospital"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_marginBottom="24dp"
        android:layout_toLeftOf="@+id/textView6"
        android:text="@string/user_logged_in_as_"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/_abc"
        android:textColor="#1CCC35"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="190dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/button1"
        android:text="@string/pressing_your_username_brings_up_a_log_of_all_your_activity" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/organDonor"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/_0_seconds_recorded"
        android:src="@drawable/swipe_left_right" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/imageView4"
        android:text="@string/swiping_up_or_down_on_any_screen_will_allow_you_to_make_a_call_to_any_of_the_emergency_services" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:text="@string/shake_device_to_go_back"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#007AA3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/_0_seconds_recorded"
        android:src="@drawable/device_shake" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:contentDescription="@string/_0_seconds_recorded"
        android:src="@drawable/swipe_up_down" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignRight="@+id/imageView4"
        android:layout_marginBottom="20dp"
        android:text="@string/pulsating_text_should_be_pressed_for_more_information" />

    <TextView
        android:id="@+id/pulseME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/imageView2"
        android:text="@string/pressable"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#007AA3" />

</RelativeLayout>