<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_orange_fade_test1"
    android:gravity="top"
    tools:context="com.chrisdixon.mobilepatientrecord.SelectPatient"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/searchButton"
        style="@drawable/button_disabled"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_disabled"
        android:text="@string/enter_at_least_2_boxes" />

    <EditText
        android:id="@+id/postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/houseNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/postcode"
        android:textColorHint="#007AA3"
        android:textColorLink="#007AA3" />

    <ImageView
        android:id="@+id/bloodTypeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/personName"
        android:layout_toLeftOf="@+id/personName"
        android:adjustViewBounds="true"
        android:contentDescription="person"
        android:maxWidth="40dp"
        android:src="@drawable/person" />

    <TextView
        android:id="@+id/title_select_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bloodTypeImage"
        android:layout_below="@+id/personImage"
        android:text="@string/type_details_into_boxes"
        android:textColor="#007AA3"
        android:textColorHint="#007AA3"
        android:textColorLink="#007AA3"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/personImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/loginTitle"
        android:adjustViewBounds="true"
        android:contentDescription="magnifying glass"
        android:maxHeight="75dp"
        android:maxWidth="75dp"
        android:src="@drawable/search" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_select_hospital"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/patient_search"
        android:textColor="#007AA3"
        android:textColorHint="#007AA3"
        android:textColorLink="#007AA3"
        android:textSize="30sp"
        android:textStyle="bold" />

   <EditText
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/houseNo"
        android:layout_below="@+id/title_select_hospital"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/full_name"
        android:inputType="textPersonName|textAutoComplete"
        android:textColorHint="#007AA3"
        android:textColorLink="#007AA3" />



    <EditText
        android:id="@+id/houseNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postcode"
        android:layout_below="@+id/personName"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/house_number"
        android:inputType="number"
        android:textColorHint="#007AA3"
        android:textColorLink="#007AA3" />

    <TextView
        android:id="@+id/userLoggedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/personImage"
        android:layout_marginBottom="14dp"
        android:text="@string/textview"
        android:textColor="#1CCC35" />

    <TextView
        android:id="@+id/usernameLogItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userLoggedIn"
        android:layout_alignBottom="@+id/userLoggedIn"
        android:layout_toLeftOf="@+id/userLoggedIn"
        android:text="@string/logged_in_as_" />

</RelativeLayout>