<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_orange_fade_test1"
    tools:context="com.chrisdixon.mobilepatientrecord.UserLogActivity" >

    <ListView
        android:id="@+id/user_log_list_item"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:divider="#007AA3"
        android:dividerHeight="3dp" >

    </ListView>

    <TextView
        android:id="@+id/paramedicLogTitle"
        android:layout_width="wrap_content"
        android:textColor="#007AA3"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/showPatientTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/paramedic_log_"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/diary"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/paramedicLogTitle"
        android:layout_below="@+id/paramedicLogTitle"
        android:adjustViewBounds="false"
        android:contentDescription="@string/diary"
        android:src="@drawable/diary2" />

    <TextView
        android:id="@+id/showPatientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userLoggedInShowPatient"
        android:layout_alignBottom="@+id/userLoggedInShowPatient"
        android:layout_alignLeft="@+id/user_log_list_item"
        android:layout_marginLeft="11dp"
        android:text="@string/username"
        android:textSize="16sp" />

    <Button
        android:id="@+id/goBack"
        style="@drawable/button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/user_log_list_item"
        android:layout_alignTop="@+id/paramedicLogTitle"
        android:background="@drawable/button"
        android:text="@string/go_back" />

    <TextView
        android:id="@+id/userLoggedInShowPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diary"
        android:layout_toLeftOf="@+id/goBack"
        android:text="@string/action"
        android:textSize="16sp" />

</RelativeLayout>
