<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/background_orange_fade_test1"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chrisdixon.mobilepatientrecord.PhotoAndAudioForHospital" >

    <TextView
        android:id="@+id/testSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/record_voice_and_picture_data_to_identify_patient"
        android:textColor="#007AA3"
        android:textSize="23sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button"
        android:text="@string/start_recording_audio" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/organDonor"
        android:layout_centerVertical="true"
        android:contentDescription="@string/_0_seconds_recorded"
        android:src="@android:drawable/ic_btn_speak_now" />

    <TextView
        android:id="@+id/counterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        tools:ignore="android:editable"
        android:editable="true"
        android:text="@string/_0_seconds_recorded"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/takePictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/button"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/organDonor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/takePictureButton"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/_0_seconds_recorded"
        android:layout_toLeftOf="@+id/startButton"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/patientResuscitate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/takePictureButton"
        android:layout_marginBottom="17dp"
        android:layout_marginRight="12dp"
        android:text="@string/logged_in_as_" />

    <TextView
        android:id="@+id/usernameForAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/patientResuscitate"
        android:layout_alignBottom="@+id/patientResuscitate"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/counterText"
        android:text="@string/textview"
        android:textColor="#1CCC35" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/_0_seconds_recorded"
        android:layout_alignBottom="@+id/stopButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:src="@android:drawable/ic_delete" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counterText"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/imageView2"
        android:background="@drawable/button_disabled"
        android:minWidth="64dp"
        android:text="@string/stop_recording_audio" />

</RelativeLayout>